# BmstuCcLab3

./: CMakeLists.txt  code.xyz
include/: assignment.hpp  binary_operation.hpp  block.hpp  factor.hpp  graphviz_vizitor.hpp  lexer.hpp  list_assignment.hpp  logical_operation.hpp  mdmr_operation.hpp  name.hpp  number.hpp  pan_operation.hpp  polish_attribution.hpp  primary.hpp  program.hpp  relation.hpp  relation_operation.hpp  simple_statement.hpp  statement.hpp  tail.hpp  term.hpp  tools.hpp  unary_operation.hpp
src/: main.cpp
test/: CMakeLists.txt
test/src/: binary_operation.cpp  factor.cpp  lexer.cpp  mdmr_operation.cpp  name.cpp  number.cpp  pan_opertaion.cpp  primary.cpp  relation.cpp  simple_statement.cpp  statement.cpp  term.cpp  unary_operation.cpp
